<resources>
    <string name="app_name">Movie</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_user_profile">My Profile</string>
    <string name="title_activity_login">MovieTrend</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="invalid_password">Password must be >5 characters</string>


    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="preferences">Preference</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="alert_exit_session_message">Do you want close session?</string>
    <string name="alert_exit_session_message_possitive">Yes</string>
    <string name="alert_exit_session_message_negative">No</string>
    <string name="action_register">Sing up</string>
    <string name="prompt_movie_genre">Favorite Movie Genre</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_last_name">Last Name</string>
</resources>