<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.register.RegisterFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primaryBackground"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editTextHeight"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/reg_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editTextHeight"
                android:hint="@string/prompt_password" />

            <EditText
                android:id="@+id/reg_pass_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editTextHeight"
                android:hint="@string/prompt_confirm_password" />

            <EditText
                android:id="@+id/reg_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editTextHeight"
                android:hint="@string/prompt_name" />

            <EditText
                android:id="@+id/reg_lastname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editTextHeight"
                android:hint="@string/prompt_last_name" />

            <EditText
                android:id="@+id/reg_favorite"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editTextHeight"
                android:hint="@string/prompt_movie_genre" />

            <Button
                android:id="@+id/reg_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/backTvEndColor"
                android:text="@string/action_sign_up" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>